--- a/views/experiment5.html
+++ b/views/experiment5.html
@@ -4,46 +4,22 @@
 		<meta charset="UTF-8" />
 	</head>
 	<body style="font-family: redfinIcons;">
-		<h1>Experiment 5: Generate svg components and write them directly into the dom</h1>
-		<p>Generate svg components, require them using webpack, and then write the icons directly into the dom.</p>
-		<div id="icon-agent"></div>
-		<div id="icon-ask-agent"></div>
-		<div id="icon-bikescore"></div>
-		<div id="icon-call"></div>
-		<div id="icon-close"></div>
-		<div id="icon-email"></div>
-		<div id="icon-favorite"></div>
-		<div id="icon-filter"></div>
-		<div id="icon-recommended"></div>
-		<div id="icon-saved-search"></div>
-		<div id="icon-search"></div>
-		<div id="icon-settings"></div>
-		<div id="icon-tour"></div>
-		<div id="icon-transitscore"></div>
-		<div id="icon-view-map"></div>
-		<div id="icon-views"></div>
-		<div id="icon-xout"></div>
+		<h1>Experiment 5: Asynchronous SVG store</h1>
+		<p>Generate an svg store, request it asynchronously, and then use media queries.</p>
+		<div id="icons"></div>
+		<div id="svgContainer" style="height: 0; width: 0; position: absolute; visibility: hidden"></div>
 
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
 		<script type="text/javascript" src="constants.js"/></script>
-		<script type="text/jsx" src="agent.js"/></script>
-		<script type="text/jsx" src="ask-agent.js"/></script>
-		<script type="text/jsx" src="bikescore.js"/></script>
-		<script type="text/jsx" src="call.js"/></script>
-		<script type="text/jsx" src="close.js"/></script>
-		<script type="text/jsx" src="email.js"/></script>
-		<script type="text/jsx" src="favorite.js"/></script>
-		<script type="text/jsx" src="filter.js"/></script>
-		<script type="text/jsx" src="house.js"/></script>
-		<script type="text/jsx" src="recommended.js"/></script>
-		<script type="text/jsx" src="saved-search.js"/></script>
-		<script type="text/jsx" src="search.js"/></script>
-		<script type="text/jsx" src="settings.js"/></script>
-		<script type="text/jsx" src="tour.js"/></script>
-		<script type="text/jsx" src="transitscore.js"/></script>
-		<script type="text/jsx" src="view-map.js"/></script>
-		<script type="text/jsx" src="views.js"/></script>
-		<script type="text/jsx" src="xout.js"/></script>
+		<script type="text/jsx" src="svg-store.js"/></script>
+		<script>
+			var xhr = new XMLHttpRequest();
+			xhr.open("GET", "svg.svg",false);
+			xhr.overrideMimeType("image/svg+xml");
+			xhr.send("");
+			document.getElementById("svgContainer")
+			  .appendChild(xhr.responseXML.documentElement);
+		</script>
 	</body>
 </html>
