Add experiment 7 and 8

--- a/views/index.html
+++ b/views/index.html
@@ -12,5 +12,7 @@
 			<li><a href="experiment4.html">Experiment 4: Generate svg components and write them directly into the dom</a></li>
 			<li><a href="experiment5.html">Experiment 5: Asynchronous SVG with media queries</a></li>
 			<li><a href="experiment6.html">Experiment 6: Generate svg components and write them directly into the dom</a></li>
+			<li><a href="experiment7.html">Experiment 7: Generate stylesheets with inlined svg images</a></li>
+			<li><a href="experiment8.html">Experiment 8: Request external svgs</a></li>
 	</body>
 </html>
