Update to include multiple sizes, colors

--- a/views/experiment2.html
+++ b/views/experiment2.html
@@ -7,6 +7,8 @@
 	<body>
 		<h1>Experiment 2: Auto-generated png spritesheets in div tags</h1>
 		<p>Generate a png spritesheet and corresponding css file and serve that, then inject icons as div tags.</p>
+		<h3 style="color: #A02021">Does not seem to support width/height</h3>
+		<h3 style="color: #A02021">Does not seem to support stroke/fill</h3>
 		<div id="icons"></div>
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
