--- a/views/experiment8.html
+++ b/views/experiment8.html
@@ -6,6 +6,7 @@
 	<body>
 		<h1>Experiment 8: Request external svgs</h1>
 		<p>Serve svgs and include them as img tags with external references</p>
+		<h3 style="color: #A02021">Does not seem to support stroke/fill (may be possible with &ltuse xlink-href="icon.svg#icon-id" /&gt)</h3>
 		<div id="icons"></div>
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
