--- a/views/experiment1.html
+++ b/views/experiment1.html
@@ -8,6 +8,8 @@
 	<body>
 		<h1>Experiment 1: Auto-generated png spritesheets in img tags</h1>
 		<p>Generate a png spritesheet and corresponding css file and serve that, then inject icons as img tags.</p>
+		<h3 style="color: #A02021">Does not support width/height</h3>
+		<h3 style="color: #A02021">Does not support stroke/fill</h3>
 		<div id="icons"></div>
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
