Update discarded experiments; generate usable css for webfont

--- a/views/experiment1.html
+++ b/views/experiment1.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="sprite.css" type="text/css" />
 	</head>
 	<body>
-		<h1>Experiment 1: Auto-generated png spritesheets in img tags</h1>
+		<h1>FAILED Experiment 1: Auto-generated png spritesheets in img tags</h1>
 		<p>Generate a png spritesheet and corresponding css file and serve that, then inject icons as img tags.</p>
 		<h3 style="color: #A02021">Does not support width/height</h3>
 		<h3 style="color: #A02021">Does not support stroke/fill</h3>
