--- a/views/experiment7.html
+++ b/views/experiment7.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="data-uri.css" type="text/css" />
 	</head>
 	<body>
-		<h1>Experiment 7: Auto-generated css with inline utf-8 encoded svgs</h1>
+		<h1>FAILED Experiment 7: Auto-generated css with inline utf-8 encoded svgs</h1>
 		<p>Generate a stylesheet with inlined utf-8 svgs and serve that, then add classes to dom elements.</p>
 		<h3 style="color: #A02021">Does not seem to support width/height</h3>
 		<h3 style="color: #A02021">Does not seem to support stroke/fill</h3>
