--- a/views/experiment2.html
+++ b/views/experiment2.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="sprite.css" type="text/css" />
 	</head>
 	<body>
-		<h1>Experiment 2: Auto-generated png spritesheets in div tags</h1>
+		<h1>FAILED Experiment 2: Auto-generated png spritesheets in div tags</h1>
 		<p>Generate a png spritesheet and corresponding css file and serve that, then inject icons as div tags.</p>
 		<h3 style="color: #A02021">Does not seem to support width/height</h3>
 		<h3 style="color: #A02021">Does not seem to support stroke/fill</h3>
