Minor bug fixes

--- a/views/experiment3a.html
+++ b/views/experiment3a.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="redfinIcons2.css" type="text/css" />
 	</head>
 	<body style="font-family: redfinIcons;">
-		<h1>Experiment 3: Auto-generated webfonts</h1>
+		<h1>Experiment 3A: Auto-generated webfonts using a different plugin</h1>
 		<p>Generate a web font and corresponding css file and serve that.</p>
 		<div id="icons"></div>
 
