--- a/views/experiment3.html
+++ b/views/experiment3.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="icon-font.css" type="text/css" />
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body style="font-family: redfinIcons;">
 		<h1>Experiment 3: Auto-generated webfonts</h1>
 		<p>Generate a web font and corresponding css file and serve that.</p>
+		<ul>
+			<li>Total size: 234 KB</li>
+			<li>Aggregate time: 3.17 s</li>
+			<li>Load time: 176 ms</li>
+			<li>Max JS Heap size: 17,941,648</li>
+		</ul>
 		<div id="icons"></div>
 
 		<script type="text/javascript" src="react/react.js"></script>
