--- a/views/experiment3a.html
+++ b/views/experiment3a.html
@@ -3,10 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="redfinIcons2.css" type="text/css" />
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body style="font-family: redfinIcons;">
 		<h1>Experiment 3A: Auto-generated webfonts using a different plugin</h1>
 		<p>Generate a web font and corresponding css file and serve that.</p>
+		<ul>
+			<li>Total size: 236 KB</li>
+			<li>Aggregate time: 3.15s</li>
+			<li>Load time: 172 ms</li>
+			<li>Max JS Heap size: 16,246,072</li>
+		</ul>
 		<div id="icons"></div>
 
 		<script type="text/javascript" src="react/react.js"></script>
