--- a/views/experiment5.html
+++ b/views/experiment5.html
@@ -2,10 +2,17 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body style="font-family: redfinIcons;">
 		<h1>Experiment 5: Asynchronous SVG store</h1>
 		<p>Generate an svg store, request it asynchronously, and then use media queries.</p>
+		<ul>
+			<li>Total size: 237 KB</li>
+			<li>Aggregate time: 3.26s</li>
+			<li>Load time: 178 ms</li>
+			<li>Max JS Heap size: 18,079,912</li>
+		</ul>
 		<div id="icons"></div>
 		<div id="svgContainer" style="height: 0; width: 0; position: absolute; visibility: hidden"></div>
 
