--- a/views/experiment6.html
+++ b/views/experiment6.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body style="font-family: redfinIcons;">
 		<h1>Experiment 6: Generate svg components and write them directly into the dom</h1>
