--- a/views/index.html
+++ b/views/index.html
@@ -15,5 +15,49 @@
 			<li><a href="experiment6.html">Experiment 6: Generate svg components and write them directly into the dom</a></li>
 			<li><a href="experiment7.html">Experiment 7: Generate stylesheets with inlined svg images</a></li>
 			<li><a href="experiment8.html">Experiment 8: Request external svgs</a></li>
+		</ul>
+		<table>
+			<tr>
+				<th>Experiment</th>
+				<th>Total size (KB)</th>
+				<th>Aggregate time (s)</th>
+				<th>Load time (ms)</th>
+				<th>Max JS Heap size (b)</th>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>234</td>
+				<td>3.17</td>
+				<td>176</td>
+				<td>17,941,648</td>
+			</tr>
+			<tr>
+				<td>3a</td>
+				<td>236</td>
+				<td>3.15</td>
+				<td>172</td>
+				<td>16,246,072</td>
+			</tr>
+			<tr>
+				<td>4</td>
+				<td>237</td>
+				<td>3.20</td>
+				<td>173</td>
+				<td>18,140,872</td>
+			</tr>
+			<tr>
+				<td>5</td>
+				<td>237</td>
+				<td>3.26</td>
+				<td>178</td>
+				<td>18,079,912</td>
+			</tr>
+			<tr>
+				<td>8</td>
+				<td>246</td>
+				<td>3.17</td>
+				<td>148</td>
+				<td>17,334,048</td>
+			</tr>
 	</body>
 </html>
