--- a/views/experiment8.html
+++ b/views/experiment8.html
@@ -2,11 +2,18 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<link href="styles.css" rel="stylesheet" />
 	</head>
 	<body>
 		<h1>Experiment 8: Request external svgs</h1>
 		<p>Serve svgs and include them as img tags with external references</p>
-		<h3 style="color: #A02021">Does not seem to support stroke/fill (may be possible with &ltuse xlink-href="icon.svg#icon-id" /&gt)</h3>
+		<h3 style="color: #A02021">Does not seem to support some kinds of malformed svgs produced by design.</h3>
+		<ul>
+			<li>Total size: 246 KB</li>
+			<li>Aggregate time: 3.17 s</li>
+			<li>Load time: 148 ms</ li>
+			<li>Max JS Heap size: 17,334,048</li>
+		</ul>
 		<div id="icons"></div>
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
