Add a link to the code repo

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
 			<li><a href="experiment7.html">Experiment 7: Generate stylesheets with inlined svg images</a></li>
 			<li><a href="experiment8.html">Experiment 8: Request external svgs</a></li>
 		</ul>
+		<a href="https://stash.redfin.com/users/doug.wade/repos/icons-experiment/browse">Browse the code!</a>
 		<table>
 			<tr>
 				<th>Experiment</th>
