--- a/views/experiment8.html
+++ b/views/experiment8.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<h1>Experiment 8: Request external svgs</h1>
-		<p>Serve svgs and include them as img tags with external references</p>
+		<p>Serve svgs and include them as svg tags with external references</p>
 		<h3 style="color: #A02021">Does not seem to support some kinds of malformed svgs produced by design.</h3>
 		<ul>
 			<li>Total size: 246 KB</li>
