Add writeup + cleanup

--- a/views/experiment6.html
+++ b/views/experiment6.html
@@ -7,23 +7,8 @@
 	<body style="font-family: redfinIcons;">
 		<h1>Experiment 6: Generate svg components and write them directly into the dom</h1>
 		<p>Generate svg components then write the icons directly into the dom.</p>
-		<div id="icon-agent"></div>
-		<div id="icon-ask-agent"></div>
-		<div id="icon-bikescore"></div>
-		<div id="icon-call"></div>
-		<div id="icon-close"></div>
-		<div id="icon-email"></div>
-		<div id="icon-favorite"></div>
-		<div id="icon-filter"></div>
-		<div id="icon-recommended"></div>
-		<div id="icon-saved-search"></div>
-		<div id="icon-search"></div>
-		<div id="icon-settings"></div>
-		<div id="icon-tour"></div>
-		<div id="icon-transitscore"></div>
-		<div id="icon-view-map"></div>
-		<div id="icon-views"></div>
-		<div id="icon-xout"></div>
+		<div id="temp"></div>
+		<div id="icons"></div>
 
 		<script type="text/javascript" src="react/react.js"></script>
 		<script type="text/javascript" src="react/JSXTransformer.js"></script>
@@ -46,5 +31,6 @@
 		<script type="text/jsx" src="view-map.js"/></script>
 		<script type="text/jsx" src="views.js"/></script>
 		<script type="text/jsx" src="xout.js"/></script>
+		<script type="text/jsx" src="svg-components.js"/></script>
 	</body>
 </html>
