--- a/views/index.html
+++ b/views/index.html
@@ -26,13 +26,6 @@
 				<th>Max JS Heap size (b)</th>
 			</tr>
 			<tr>
-				<td>3</td>
-				<td>234</td>
-				<td>3.17</td>
-				<td>176</td>
-				<td>17,941,648</td>
-			</tr>
-			<tr>
 				<td>3a</td>
 				<td>236</td>
 				<td>3.15</td>
@@ -60,5 +53,6 @@
 				<td>148</td>
 				<td>17,334,048</td>
 			</tr>
+		</table>
 	</body>
 </html>
